Se agregaron mas paginas para complementar la infromacion

--- a/style.css
+++ b/style.css
@@ -56,3 +56,11 @@ section {
     margin-left: 10px;
     font-size: 16px;
 }
+.boton-frecuencias {
+    background-color: #94e468;;
+    color:  rgb(240, 108, 72); 
+    font-size: 18px;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+  }
